[project]
name = "recomsys-etfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gradio>=5.35.0",
    "kiwipiepy>=0.21.0",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.27",
    "langfuse>=3.0.8",
    "langgraph>=0.5.0",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
]
